# cortex

./: .gitignore  CLAUDE.md  README.md  chao_mundo.txt  config.example.toml  pyproject.toml
cortex/: __init__.py  agent.py  cli.py  config.py  display.py  events.py  memory.py  stats.py  voice.py
cortex/agents/: __init__.py  llm.py  orchestrator.py  preset.py  presets.py  prompt_base.py  runner.py
cortex/integrations/: __init__.py  google_auth.py  microsoft_auth.py
cortex/tools/: __init__.py  browser.py  datetime_tool.py  document.py  filesystem.py  git_tool.py  gmail.py  outlook.py  pdf.py  pptx.py  python_exec.py  registry.py  search.py  sharepoint.py  shell.py  stock.py  weather.py  web.py  whatsapp.py
cortexApp/: index.js  package.json
tests/: test_agents.py  test_integrations.py  test_tools.py
