[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-cli"
version = "0.1.0"
description = "Local AI agents with tools, in your terminal — powered by Ollama. Zero cost, full control."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "ollama", "cli", "local-llm", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "litellm>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "toml>=0.10.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]

[project.scripts]
cortex = "cortex.cli:app"

[project.urls]
Homepage = "https://github.com/benjaghv/cortex"
Repository = "https://github.com/benjaghv/cortex"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["cortex"]
