[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex-cli"
version = "0.3.0"
description = "Local AI agents with tools, in your terminal — powered by Ollama. Zero cost, full control."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai", "agents", "ollama", "cli", "local-llm", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
# Core deps + all pure-Python tool deps, so `pip install -e .` makes every tool
# work out of the box on any device (Windows/Mac/Linux). The two genuinely fragile
# deps (pyaudio needs PortAudio, playwright needs a browser download) stay optional
# and are handled by `cortex setup`.
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "litellm>=1.40.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "toml>=0.10.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",          # document tool (.docx)
    "python-pptx>=0.6.23",         # pptx tool
    "SpeechRecognition>=3.10.0",   # voice transcription (mic capture needs pyaudio extra)
    "google-api-python-client>=2.100",  # gmail tool
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0"]
# Fragile extras — need a system lib / binary pip can't provide. Run `cortex setup --install`.
voice = ["pyaudio>=0.2.13"]        # microphone capture — needs PortAudio (brew/apt) on Mac/Linux
browser = ["playwright>=1.44.0"]   # then: playwright install chromium
all = ["pyaudio>=0.2.13", "playwright>=1.44.0", "pytest>=8.0.0", "ruff>=0.4.0"]

[project.scripts]
cortex = "cortex.cli:app"

[project.urls]
Homepage = "https://github.com/benjaghv/cortex"
Repository = "https://github.com/benjaghv/cortex"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["cortex"]
